--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "galio-framework": "^0.8.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-screens": "~3.18.0",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
