--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
-    "eslint": "^8.34.0",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
@@ -25,8 +24,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4"
   },
   "private": true
