--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/eva-icons": "^5.1.2",
     "eslint": "^8.34.0",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.2",
+    "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "^5.0.1",
     "expo-status-bar": "~1.4.2",
     "galio-framework": "^0.8.0",
@@ -28,7 +32,7 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-image-picker": "~14.0.2"
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
