--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@eva-design/eva": "^2.1.1",
+    "@expo-google-fonts/karla": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.6.1",
@@ -25,17 +26,19 @@
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.2",
+    "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "^5.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "galio-framework": "^0.8.0",
     "react": "18.1.0",
     "react-hook-form": "^7.43.1",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.8.0",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
