--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "expo-status-bar": "~1.4.2",
     "galio-framework": "^0.8.0",
     "react": "18.1.0",
+    "react-devtools-core": "^4.27.2",
     "react-hook-form": "^7.43.1",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.8.0"
