--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-av": "~13.0.2",
     "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
-    "expo-screen-orientation": "^5.0.1",
+    "expo-screen-orientation": "~5.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "galio-framework": "^0.8.0",
@@ -40,7 +40,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
