--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@eva-design/eva": "^2.1.1",
-    "@expo-google-fonts/karla": "^0.2.3",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/drawer": "^6.6.1",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
-    "@react-navigation/stack": "^6.3.15",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "@ui-kitten/components": "^5.1.2",
@@ -26,24 +24,23 @@
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "~13.0.2",
-    "expo-font": "~11.0.1",
     "expo-image-picker": "~14.0.2",
     "expo-screen-orientation": "^5.0.1",
-    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "galio-framework": "^0.8.0",
     "react": "18.1.0",
     "react-hook-form": "^7.43.1",
     "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4"
   },
   "private": true
